Showing popups fix

--- a/src/index.html
+++ b/src/index.html
@@ -193,10 +193,10 @@
             <div class="popup__subtitle">
               Тактична медицина за алгоритмом MARCH
             </div>
-            <form class="popup__form" METHOD="GET" action="/handleForm" >
-              <input  class="popup__form-input"  name="name" placeholder="Прізвище та імʼя" type="text" required>
-              <input  class="popup__form-input"  name="phone" placeholder="Телефон" type="tel" required>
-              <input  class="popup__form-input"  name="telegram" placeholder="Нік telegram" type="text">
+            <form class="popup__form">
+              <input id="name" class="popup__form-input"  name="name" placeholder="Прізвище та імʼя" type="text" required>
+              <input id="phone" class="popup__form-input"  name="phone" placeholder="Телефон" type="tel" required>
+              <input id="telegram" class="popup__form-input"  name="telegram" placeholder="Нік telegram" type="text">
               <div class="checbox__wrapper">
                   <input type="checkbox" name="accept" id="checbox" checked class="popup__form-checkbox" required>
                   <label for="checbox">Даю згоду на обробку персональних даних</label>
