--- a/src/index.html
+++ b/src/index.html
@@ -21,15 +21,15 @@
     <meta name="title" content="Тактична медицина" />
     <meta name="description" content="Треніг з тактичної медицини за протоколом TCCC" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tactical-med.kiev.ua" />
+    <meta property="og:url" content="https://tactical-med.com.ua" />
     <meta property="og:title" content="Тактична медицина" />
     <meta property="og:description" content="Треніг з тактичної медицини за протоколом TCCC" />
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <!-- <meta property="og:image" content="img/meta-img.png" /> -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://tactical-med.kiev.ua" />
+    <meta property="twitter:url" content="https://tactical-med.com.ua" />
     <meta property="twitter:title" content="Тактична медицина" />
     <meta property="twitter:description" content="Треніг з тактичної медицини за протоколом TCCC" />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <!-- <meta property="twitter:image" content="img/meta-img.png" /> -->
     <meta name="googlebot" content="notranslate">
     <meta name="robots" content="all">
     <meta name="msapplication-TileColor" content="#ffffff">
